# paper-tracker

./: .gitignore  INTEGRATION_TEST_RESULTS.md  LICENSE  PLAN.md  config.yaml.example  pyproject.toml  report.md
.omc/: project-memory.json
.omc/sessions/: 18f434f8-1ff6-4023-827e-a7ce5e078993.json
.omc/state/: agent-replay-18f434f8-1ff6-4023-827e-a7ce5e078993.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
.omc/state/sessions/18f434f8-1ff6-4023-827e-a7ce5e078993/: team-state.json
paper_tracker/: __init__.py  cli.py  config.py  dateutil.py
paper_tracker/fetcher/: __init__.py  arxiv.py  filter.py
paper_tracker/reporter/: __init__.py  markdown.py
paper_tracker/store/: __init__.py  database.py
paper_tracker/summarizer/: __init__.py  claude.py
scripts/: daily-run.sh
tests/: README.md  __init__.py  conftest.py  test_dateutil.py  test_fetcher.py  test_filter.py  test_reporter.py  test_store.py  test_summarizer.py
